src/snapshot_middleware/snapshots/test__client_from_imfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  relevant_paths:
    - /foo.client.lua
name: foo
class_name: LocalScript
properties:
  Source:
    Type: String
    Value: Hello there!
children: []