src/snapshot_middleware/snapshots/test__client_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.client.lua
  relevant_paths:
    - /foo.client.lua
    - /foo.meta.json
  context:
    path_ignore_glob: []
name: foo
class_name: LocalScript
properties:
  Source:
    Type: String
    Value: Hello there!
children: []
