src/snapshot_middleware/snapshots/test__empty_folder.snap
---
source: src/snapshot_middleware/dir.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  contributing_paths:
    - /foo
  project_node: ~
name: foo
class_name: Folder
properties: {}
children: []
