src/snapshot_middleware/snapshots/test__init_module_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /root
  relevant_paths:
    - /root
    - /root/init.meta.json
    - /root/init.lua
    - /root/init.server.lua
    - /root/init.client.lua
  context:
    ignore_paths: []
name: root
class_name: ModuleScript
properties:
  Source:
    Type: String
    Value: Hello!
children: []
