src/snapshot_middleware/snapshots/test__instance_from_imfs.snap
---
source: src/snapshot_middleware/txt.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  contributing_paths:
    - /foo.txt
  project_node: ~
name: foo
class_name: StringValue
properties:
  Value:
    Type: String
    Value: Hello there!
children: []
