src/snapshot_middleware/snapshots/test__instance_from_vfs.snap
---
source: src/snapshot_middleware/txt.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.txt
  relevant_paths:
    - /foo.txt
    - /foo.meta.json
  context:
    path_ignore_glob: []
name: foo
class_name: StringValue
properties:
  Value:
    Type: String
    Value: Hello there!
children: []
