src/snapshot_middleware/snapshots/test__model_from_vfs.snap
---
source: src/snapshot_middleware/json_model.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.model.json
  relevant_paths:
    - /foo.model.json
  context:
    ignore_paths: []
name: foo
class_name: IntValue
properties:
  Value:
    Type: Int32
    Value: 5
children:
  - snapshot_id: ~
    metadata:
      ignore_unknown_instances: false
      relevant_paths: []
      context:
        ignore_paths: []
    name: The Child
    class_name: StringValue
    properties: {}
    children: []
